[package]
name = "yt-raymarch-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = [
    "bevy_sprite",
    "bevy_ui",
    "webgl2",
    "bevy_gizmos",
    "bevy_winit",
    "default_font",
] }
web-sys = { version = "0.3.64", features = ["Window", "Location"] }
